# MIS_RayTracing

./: .gitignore  BUILD.bazel  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Object.hpp  README.md  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  WORKSPACE  global.hpp  main.cpp  sfml-header.BUILD  sfml.BUILD
ci/: run.bat  run.sh
docs/imgs/: MultiLight_LIGHT.ppm  singlelight_BRDF.ppm  singlelight_MIS.ppm
src/: BUILD.bazel  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.cpp  Object.hpp  Profiler.h  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  VirtualScreen.cpp  VirtualScreen.hpp  global.cpp  global.hpp  main.cpp
